Style fixes and old posts collapse

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -649,3 +649,18 @@ article.search-result .ellipsis:after {
 article .icon-item i {
     font-size: 1.5em;
 }
+
+/* Patch title for content pages */
+.content-title {
+    margin: 0;
+    padding: 0;
+    font-family: Lato, sans-serif;
+    padding-top: 20px;
+    text-transform: capitalize;
+    font-weight: 300;
+    font-size: 2.2em;
+    line-height: 100%;
+    display: inline-block;
+    color: #333;
+    -webkit-text-stroke: .007em;
+}
